--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@shopify/flash-list": "1.4.3",
     "axios": "^1.5.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.7",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
@@ -40,6 +41,7 @@
     "expo-updates": "~0.18.19",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.10",
