--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^7.0.0",
     "react-native-image-slider-box": "^2.0.7",
