--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-firebase/app": "^18.4.0",
@@ -32,6 +33,7 @@
     "expo-file-system": "~15.4.5",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.4.0",
+    "expo-image-manipulator": "^11.8.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
@@ -62,6 +64,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-web": "^0.19.10",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
