--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-file-system": "~15.4.5",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.4.0",
-    "expo-image-manipulator": "^11.8.0",
+    "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
