--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-updates": "~0.18.19",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "5.1.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
