--- a/package.json
+++ b/package.json
@@ -1,80 +1,53 @@
 {
-  "name": "awesomeproject",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
+  "name": "fir_app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-firebase/app": "^18.4.0",
-    "@react-native-firebase/auth": "^18.4.0",
-    "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/drawer": "^6.6.3",
-    "@react-navigation/material-top-tabs": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@shopify/flash-list": "1.4.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.15.0",
+    "app": "^0.1.0",
     "axios": "^1.5.0",
-    "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~49.0.7",
-    "expo-app-loading": "^2.1.1",
-    "expo-av": "~13.4.1",
-    "expo-document-picker": "~11.5.4",
-    "expo-file-system": "~15.4.5",
-    "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "~11.4.0",
-    "expo-image-manipulator": "~11.3.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-location": "~16.1.0",
-    "expo-screen-orientation": "~6.0.6",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
-    "firebase": "^10.3.1",
-    "firebase-admin": "^11.10.1",
-    "lottie-react-native": "5.1.6",
-    "prop-types": "^15.8.1",
+    "firebase": "^10.7.2",
+    "gsap": "^3.12.2",
+    "materialize-css": "^1.0.0",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.10",
-    "react-native-axios": "^0.17.1",
-    "react-native-collapsible": "^1.6.1",
-    "react-native-document-picker": "^9.0.1",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-gifted-chat": "^2.4.0",
-    "react-native-image-crop-picker": "^0.40.0",
-    "react-native-image-picker": "^7.0.0",
-    "react-native-image-slider-box": "^2.0.7",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.7.1",
-    "react-native-pager-view": "6.2.0",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-web": "^0.19.10",
-    "react-native-webview": "13.2.2",
-    "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-otp-input": "^3.1.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "swiper": "^10.3.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.31",
-    "@types/react-native": "^0.72.5",
-    "typescript": "^5.2.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "private": true
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
