--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
-    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -23,58 +23,58 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
-    "@shopify/flash-list": "1.4.3",
+    "@shopify/flash-list": "^1.6.4",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~49.0.7",
+    "expo": "^51.0.2",
     "expo-app-loading": "^2.1.1",
-    "expo-av": "~13.4.1",
-    "expo-document-picker": "~11.5.4",
-    "expo-file-system": "~15.4.5",
+    "expo-av": "^14.0.4",
+    "expo-document-picker": "^12.0.1",
+    "expo-file-system": "^17.0.1",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "~11.4.0",
-    "expo-image-manipulator": "~11.3.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-location": "~16.1.0",
-    "expo-screen-orientation": "~6.0.6",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo-font": "^12.0.4",
+    "expo-image-manipulator": "^12.0.3",
+    "expo-image-picker": "^15.0.4",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-location": "^17.0.1",
+    "expo-screen-orientation": "^7.0.4",
+    "expo-splash-screen": "^0.27.4",
+    "expo-status-bar": "^1.12.1",
+    "expo-updates": "^0.25.11",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
-    "lottie-react-native": "5.1.6",
+    "lottie-react-native": "^6.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "^0.74.1",
     "react-native-axios": "^0.17.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-document-picker": "^9.0.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^7.0.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.7.1",
-    "react-native-pager-view": "6.2.0",
+    "react-native-maps": "^1.14.0",
+    "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.10",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "^13.8.6",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.31",
+    "@babel/core": "^7.24.0",
+    "@types/react": "^18.2.79",
     "@types/react-native": "^0.72.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
