--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.1",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.4.0",
-    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
@@ -23,50 +23,50 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
-    "@shopify/flash-list": "^1.6.4",
+    "@shopify/flash-list": "^1.6.3",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^51.0.8",
+    "expo": "^50.0.18",
     "expo-app-loading": "^2.1.1",
-    "expo-av": "^14.0.5",
-    "expo-document-picker": "^12.0.1",
-    "expo-file-system": "^17.0.1",
+    "expo-av": "~13.10.6",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.9",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-font": "^12.0.5",
-    "expo-image-manipulator": "^12.0.5",
-    "expo-image-picker": "^15.0.5",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-location": "^17.0.1",
-    "expo-screen-orientation": "^7.0.5",
-    "expo-splash-screen": "^0.27.4",
-    "expo-status-bar": "^1.12.1",
-    "expo-updates": "^0.25.14",
+    "expo-font": "~11.10.3",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
+    "expo-screen-orientation": "~6.4.1",
+    "expo-splash-screen": "^0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "^0.24.12",
     "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
-    "lottie-react-native": "^6.7.0",
+    "lottie-react-native": "^6.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.73.6",
     "react-native-axios": "^0.17.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-document-picker": "^9.0.1",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^7.0.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.14.0",
-    "react-native-pager-view": "^6.3.0",
+    "react-native-maps": "^1.10.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.10",
-    "react-native-webview": "^13.8.6",
+    "react-native-webview": "^13.6.4",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
